--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -40,7 +40,7 @@
            </div>
         </ion-label>
         <div class="end-slot2" slot="end">
-          <h2>USD {{ coin.current_price.toLocaleString() }}</h2>
+          <h2>NGN {{ coin.current_price.toLocaleString() }}</h2>
           <h5>{{ coin.name }}</h5>
       </div>
       </ion-item>
